--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/auth": "^12.8.0",
     "expo": "~42.0.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
